# jokebook

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/workflows/: deploy.yml
apps/app/: package.json
apps/app/src/: App.css  App.tsx
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/src/: lib.rs
apps/app/src/components/: Editor.tsx  FileTree.tsx  GraphView.tsx  SyncPanel.tsx
apps/app/src/lib/: api.ts  editorHighlight.ts  sync.ts  tree.ts  wikilinks.ts
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: App.css  App.tsx  Tree.tsx  api.ts  icons.tsx  jokes.ts  local.ts  main.tsx  wikilinks.ts  zip.ts
server/: .env.example  docker-compose.yml  drizzle.config.ts  package.json  tsconfig.json  tsup.config.ts
server/drizzle/: 0000_blushing_anthem.sql
server/drizzle/meta/: 0000_snapshot.json  _journal.json
server/src/: app.ts  auth.ts  dto.ts  fastify.d.ts  index.ts
server/src/db/: index.ts  schema.ts
server/src/routes/: auth.ts  sync.ts
server/test/: sync.test.ts
