[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# default-features minus "compression": крейт brotli 8.0.3 не компилируется на Rust 1.96
# (E0277 StandardAlloc: alloc::Allocator). compression лишь сжимает встраиваемые ассеты —
# в dev не нужна, в release только чуть увеличивает размер бинаря.
tauri = { version = "2", default-features = false, features = ["wry", "common-controls-v6", "dynamic-acl", "x11", "dbus"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Filesystem watcher: refresh the index live when sync or an external editor
# writes to the vault. Pure Rust (ReadDirectoryChangesW on Windows).
notify = "6"
# Full-text search. `bundled` compiles SQLite from source (needs MSVC) with
# FTS5 + unicode61 tokenizer enabled. The index lives in memory, rebuilt on load.
rusqlite = { version = "0.32", features = ["bundled"] }

